Projet total/Assembleur/tests/bad/testfile-bad-instr-2.ms
    .section text
notaninstruction %rax %rbx %rcx